--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;1,400&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <app-root></app-root>
